<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E3E3"
    android:elevation="15dp"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/wave_of_food"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.367"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/deliver_favorite_food"
        android:textColor="@color/textGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="casual"
        android:text="@string/signup_account"
        android:textColor="@color/textGreen"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/signupUserName"
        android:layout_width="326dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:autofillHints="Email"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/usericon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/SignUpEmail"
        android:layout_width="326dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:autofillHints="Email"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/emailicon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/signupUserName"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="@+id/signupUserName"
        app:layout_constraintTop_toBottomOf="@+id/signupUserName" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="326dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:autofillHints="PassWord"
        android:background="@drawable/edittextshape"
        android:drawableStart="@drawable/passwordicon"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/SignUpEmail"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="@+id/SignUpEmail"
        app:layout_constraintTop_toBottomOf="@+id/SignUpEmail" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupFaceBook"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/whitebutton"
        android:drawableStart="@drawable/facebook_3_1"
        android:elevation="15dp"
        android:paddingStart="10dp"
        android:text="@string/facebook"
        app:layout_constraintEnd_toStartOf="@+id/signupGoogle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupGoogle"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/whitebutton"
        android:drawableStart="@drawable/google_icon_2"
        android:drawablePadding="10dp"
        android:elegantTextHeight="true"
        android:elevation="15dp"
        android:paddingStart="10dp"
        android:text="@string/google"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/signupFaceBook"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/sign_up"
        android:background="@drawable/loginsignupbtn"
        app:layout_constraintEnd_toEndOf="@+id/signupGoogle"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/signupFaceBook"
        app:layout_constraintTop_toBottomOf="@+id/signupGoogle" />


</androidx.constraintlayout.widget.ConstraintLayout>