<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpalshScreen"
    android:background="@color/bg"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo"
        />

    <TextView
        android:id="@+id/companyName"
        android:layout_width="277dp"
        android:layout_height="47dp"
        android:layout_marginTop="84dp"
        android:background="#ccede5"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/wave_of_food"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/ownerName"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:background="#ccede5"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/deliver_best_food"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/designed_by_monu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ownerName"
        android:fontFamily="serif-monospace"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintVertical_bias="0.65"
        android:gravity="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>